<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal|bottom"
    android:gravity="center"
    android:paddingBottom="@dimen/overview_panel_bottom_padding">
<!--   above is modify by zxa  for remove overview_panel_bg
android:background="@drawable/overview_panel_bg"
android:paddingBottom="@dimen/overview_panel_bottom_padding"
 -->
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/wallpaper_button"
        android:text="@string/wallpaper_button_text"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/wallpaper_button"
        android:gravity="center_horizontal"
        style="@style/OverviewPanelText"/>
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/widget_button"
        android:text="@string/widget_button_text"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/widget_button"
        style="@style/OverviewPanelText"/>
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"/>
    
    <!-- Added by tyd Greg 2014-03-25,for support private widget -->
    <TextView
        android:id="@+id/private_widget_button"
        android:text="@string/private_widget_tab_name"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/private_widget_button"
        style="@style/OverviewPanelText"/>
    
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"/>
    <!-- tyd -->
    
    <!-- Added by tyd Greg 2014-03-25,for support tranistion effect -->
    <TextView
        android:id="@+id/launcher_settings_button"
        android:text="@string/menu_launcher_settings"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/launcher_setting_button"
        style="@style/OverviewPanelText" />
    
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <!-- tyd -->
    
    <TextView
        android:id="@+id/settings_button"
        android:text="@string/settings_button_text"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/setting_button"

        style="@style/OverviewPanelText"
        android:visibility="gone" />

    <!-- M: Add for op09 Edit and Hide app icons. Start-->
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"
        android:id="@+id/edit_spacer"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/edit_app_button"
        android:text="@string/edit_app_button_text"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_launcher_edit_holo"
        
        android:visibility="gone"
        style="@style/OverviewPanelText"/>
    <Space
        android:layout_width="@dimen/overview_panel_buttonSpacing"
        android:layout_height="wrap_content"
        android:id="@+id/hide_spacer"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/hide_app_button"
        android:text="@string/hide_app_button_text"
        android:drawablePadding="4dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_launcher_hide_holo"
        
        android:visibility="gone"
        style="@style/OverviewPanelText"/>
    <!-- M: Add for op09 Edit and Hide app icons. End-->
 </LinearLayout>
</LinearLayout>
